# LAB_06

.github/workflows/: tets.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake
testovaya/: solver_app-0.1.0.0-win64.msi
