cmake_minimum_required(VERSION 3.4)
set(CMAKE_CXX_STANDART 11)
set(CMAKE_CXX_STANDART_REQUIRED ON)
project(lab03_1)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../formatter_lib)
add_library(formatter_lib STATIC ${CMAKE_CURRENT_SOURCE_DIR}/../formatter_lib/formatter.cpp)
add_library(formatter_ex_lib STATIC ${CMAKE_CURRENT_SOURCE_DIR}/formatter_ex.cpp)
target_link_libraries(formatter_ex_lib formatter_lib)
